# reddyos-osdev

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  README.md  debug.sh  flake.nix  limine.conf  make_iso.sh  mlibc.sh  qemu.sh  run.sh
files/: test.txt
headers/: helpers_extra.h  types_extra.h
headers/acpi/: acpi.h  fadt.h
headers/asm/: macros.inc
headers/filesystem/fd/: fd.h
headers/filesystem/fs/devfs/: devfs.h
headers/filesystem/fs/tarfs/: tarfs.h
headers/filesystem/vfs/: file.h  files.h  mount.h  vfs.h  vnode.h
headers/framebuffer/: basic_impl.h  fb.h
headers/init/: fpu.h  pit.h
headers/interrupts/: apic.h  gdt.h  idt.h  irq.h  isr.h  panic.h  stub_lists.h
headers/interrupts/apic/: ioapic.h  lapic.h  madt.h
headers/interupts/: panic.h
headers/kernel_common/: common.h  elf.h  itoa.h  limine_requests.h  paging.h  terminal.h
headers/kernel_common/c_generic/: cpuid.h  io.h  string.h
headers/kernel_common/memory/: heap.h  pmm.h  vma.h  vmm.h
headers/kernel_common/scheduler/: process.h  process_stack.h  scheduler.h  task.h  thread.h
headers/kernel_common/syscalls/: def.h  errors.h  filesystem.h  syscalls.h
headers/kernel_common/syscalls/arch/: arch.h
headers/kernel_common/syscalls/custom/: term.h
headers/kernel_common/syscalls/fs/: fs.h  fs_errors.h  stat.h
headers/kernel_common/syscalls/memory/: memory.h
headers/kernel_common/syscalls/time/: clock.h  sleep.h
headers/memory/: heap.h
headers/scheduler/: thread.h
headers/syscalls/: def.h
headers/syscalls/custom/: term.h
headers/syscalls/fs/: fs.h  fs_flags.h
headers/time/: clocks.h  helpers_time.h
headers/time/clocks/: hpet.h  pm_timer.h  rtc.h  tsc.h
src/: main.c
src/acpi/: acpi.c  fadt.c  uacpi_kernel.c
src/filesystem/fd/: fd.c
src/filesystem/fs/devfs/: devfs.c
src/filesystem/fs/tarfs/: tarfs.c
src/filesystem/vfs/: mount.c  vfs.c
src/framebuffer/: fb.c
src/impl/kernel/: main.c
src/impl/x86_64/boot/: header.asm  main.asm  main64.asm
src/impl/x86_64/src/: print.c
src/init/: fpu.c  pit.c
src/interrupts/: apic.c  asserts.c  gdt.c  idt.c  idt.h  irq.asm  irq.c  isr.asm  isr.c  panic.c
src/interrupts/apic/: ioapic.c  lapic.c  madt.c
src/intf/: print.h
src/kernel_common/: core_dump.c  elf.c  gcc_mem.c  limine_requests.c  paging.c  paging.c.old  terminal.c
src/kernel_common/c_generic/: gcc_mem.c  itoa.c  string.c
src/kernel_common/memory/: heap.c  pmm.c  vma.c  vmm.c
src/kernel_common/scheduler/: process.c  scheduler.c  switch.asm  task.c  thread.asm  thread.c
src/kernel_common/syscalls/: filesystem.c  syscall_entry.asm  syscalls.c
src/kernel_common/syscalls/arch/: arch.c
src/kernel_common/syscalls/custom/: term.c
src/kernel_common/syscalls/fs/: fs.c
src/kernel_common/syscalls/memory/: memory.c
src/kernel_common/syscalls/time/: clock.c  sleep.c
src/memory/: heap.c  vma.c  vmm.c
src/scheduler/: thread.asm  thread.c
src/syscalls/: syscalls.c
src/syscalls/fs/: fs.c
src/syscalls/memory/: memory.c
src/time/: clocks.c
src/time/clocks/: hpet.c  pm_timer.c  rtc.c  tsc.c
system/: CMakeLists.txt
system/init/: CMakeLists.txt
system/init/headers/: syscalls.h  terminal.h
system/init/src/: main.c
system/systest/headers/: terminal.h
system/systest/src/: main.c
targets/x86_64/iso/boot/grub/: grub.cfg
toolchain/: make_binutils.sh  make_gcc.sh  mlibc_build.sh  mlibc_headers.sh  reddyos-cross.txt  reddyos-sysdeps  sysdeps.sh
